objects/copado__System_Property__c.object
<CustomObject>
    <description>This is the pipeline/environment/user specific system properties.</description>
    <fields>
        <fullName>copado__API_Name__c</fullName>
        <description>This is the unique name of the system property which is used as a reference in dynamic expressions.</description>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the environment which is linked to the system property.</description>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>System Properties</relationshipLabel>
        <relationshipName>System_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Is_Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checbox to hide the sensitive information.</description>
        <inlineHelpText>If this field is selected, the value won&apos;t be accessible to any user, and it will be securely saved. The value will remain hidden unless the field is unchecked</inlineHelpText>
        <label>Hide Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__ParentId__c</fullName>
        <description>This value is automatically populated when selecting a Pipeline, Environment or User. If none is selected, the record Id this property is linked to must be entered manually.</description>
        <inlineHelpText>This value is automatically populated when selecting a Pipeline, Environment or User. If none is selected, the record Id this property is linked to must be entered manually.</inlineHelpText>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the pipeline linked to the system property.</description>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>System Properties</relationshipLabel>
        <relationshipName>System_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__UID__c</fullName>
        <description>Read-only field used internally for system property replacement.</description>
        <formula>copado__ParentId__c + &quot;-&quot; + copado__API_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field used internally for system property replacement.</inlineHelpText>
        <label>UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the user linked to the system property.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Value__c</fullName>
        <description>This is the value of the system property.</description>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>System Property</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__API_Name__c</columns>
        <columns>copado__Value__c</columns>
        <columns>copado__Is_Sensitive__c</columns>
        <columns>copado__Pipeline__c</columns>
        <columns>copado__Environment__c</columns>
        <columns>copado__User__c</columns>
        <columns>copado__ParentId__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Properties</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>copado__API_Name_Cannot_Contain_Spaces</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(copado__API_Name__c, &apos; &apos;)</errorConditionFormula>
        <errorDisplayField>copado__API_Name__c</errorDisplayField>
        <errorMessage>The API Name cannot contain blank spaces.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Only_One_Parent_Is_Allowed</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
NOT(ISBLANK(copado__Environment__c)),
NOT(ISBLANK(copado__Pipeline__c))
),
AND(
NOT(ISBLANK(copado__Environment__c)),
NOT(ISBLANK(copado__User__c))
),
AND(
NOT(ISBLANK(copado__User__c)),
NOT(ISBLANK(copado__Pipeline__c))
)
)</errorConditionFormula>
        <errorMessage>A property can only be related to one parent: Environment, Pipeline, or User.</errorMessage>
    </validationRules>
</CustomObject>